@@ -1,4 +1,4 @@
-#	$NetBSD: list,v 1.5 2004/01/14 01:52:59 mrg Exp $
+#	$NetBSD: list,v 1.6 2006/11/11 14:47:27 jmmv Exp $
 
 SRCDIRS	bin sbin libexec usr.bin/less usr.bin usr.sbin gnu/usr.bin
 
@@ -58,8 +58,7 @@ PROG	usr/bin/less		usr/bin/more
 PROG	usr/bin/sed
 PROG	usr/bin/tip
 
-MTREE	./usr/libexec  type=dir uname=root gname=wheel mode=0755
-PROG	usr/libexec/lfs_cleanerd
+PROG	libexec/lfs_cleanerd
 
 PROG	usr/sbin/chat
 PROG	usr/sbin/chown		usr/bin/chgrp
